--- a/styles/style.css
+++ b/styles/style.css
@@ -28,7 +28,7 @@ nav {
 }
 
 .nav-item a,
-i {
+.nav-item i {
     text-decoration: none;
     color: #3A3A3A;
     font-weight: 600;
@@ -71,6 +71,7 @@ i {
     padding: 10px 15px;
     border-radius: 40px;
 }
+
 
 .header-img img {
     width: 100%;
@@ -132,21 +133,34 @@ i {
     color: rgba(0, 0, 0, 0.87);
     font-weight: 400;
     font-size: 24px;
+    padding-top: 10px;
+
 }
 
+.rating-icons {
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
 
 .rating-icons i {
-    display: inline;
     font-size: 12px;
+    padding: 1px;
 
+}
+
+.rating-icons span {
+    color: #5E6366;
+    font-weight: 700;
+    font-size: 14px;
+    margin-left: 8px;
 }
 
 
 .fa-star,
 .fa-star-half-stroke {
-    color: gold;
-    width: 16px;
-    height: 16px;
+    color: #FB8200;
+    width: 10px;
+    height: 10px;
 }
 
 .collection-info {
@@ -218,19 +232,19 @@ footer {
     margin-left: 5px;
 }
 
-/* -------------------------------------media queriy------------------------------- */
+/* -------------------------------------  media queriy    ------------------------------- */
 @media only screen and (max-width:576px) {
     .all-info {
         margin: 20px;
     }
 
+    /*---------------------- header---------------------  */
     nav {
         display: none;
     }
 
     .influncer-detail {
         flex-direction: column-reverse;
-
         width: 100%;
     }
 
@@ -253,6 +267,7 @@ footer {
         width: 300px;
     }
 
+    /* -------------------------------------partners--------------------------------- */
     .partners {
         display: grid;
         grid-template-columns: repeat(4, 1fr);
@@ -260,7 +275,7 @@ footer {
         align-items: center;
         gap: 15px;
         height: 100%;
-        width: 100%;
+        width: 90%;
         border-top: 1px dotted #C0CCDA;
         border-bottom: 1px dotted #C0CCDA;
         border-radius: 5px;
@@ -272,10 +287,12 @@ footer {
         width: 60%;
     }
 
+    /* ---------------------------------collections-------------------------- */
     .collections {
         grid-template-columns: repeat(1, 1fr);
     }
 
+    /* --------------------------featured-products----------------------------------- */
     .featured-products {
         flex-direction: column-reverse;
         justify-content: center;
